Cleaning up deprecated methods.